# ocaml

./: README.md
hello/lib/: dune  en.mli  es.ml
hello2/: dune-project
hello2/_build/: log
hello2/lib/: dune
hello2/test/: dune
names_and_functions/: dune-project
names_and_functions/lib/: addTen.ml  consonant.ml  dune  non_zero.ml  power.ml  sumUp.ml
names_and_functions/test/: dune
pattern_matching/: dune-project
pattern_matching/lib/: alphabets.ml  dune  factorial.ml  isVowel.ml  not.ml  pow.ml  sum.ml
pattern_matching/test/: dune
